--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -49,9 +49,13 @@ table {
 /** end reset css**/
 body {
 	max-width: 1140px;
-	margin:auto;
+	margin: auto;
 	font-family: 'Work Sans' ;
 	font-size: 14px;
+	background: #FFFEF8;
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
 }
 header {
 	display: flex;
@@ -163,33 +167,46 @@ li:hover {
 
 .gallery img {
 	width: 100%;
-
 }
-#contact {
+#contact,
+#login {
 	width: 50%;
-margin: auto;
+	margin: auto;
+	max-width: 380px;
 }
-#contact > * {
-	text-align: center;
+#login {
+	margin-top: 100px;
+}
 
+#contact > *,
+#login > * {
+	text-align: center;
 }
-#contact h2{
+#contact h2,
+#login h2{
 	margin-bottom: 20px;
 }
-#contact form {
+#login a {
+	text-align: center;
+	color: #3D3D3D;
+}
+#contact form,
+#login form {
 	text-align: left;
 	margin-top:30px;
 	display: flex;
 	flex-direction: column;
 }
 
-#contact input {
+#contact input,
+#login input {
 	height: 50px;
 	font-size: 1.2em;
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
-#contact label {
+#contact label,
+#login label {
 	margin: 2em 0 1em 0;
 }
 #contact textarea {
@@ -206,11 +223,15 @@ input[type="submit"]{
 	width: 180px;
 	text-align: center;
 	border-radius: 60px ;
+	border : none;
+}
+
+footer {
+	margin-top: auto;
 }
 
 footer nav ul {
 	display: flex;
 	justify-content: flex-end;
-	margin: 2em
+	margin: 2em;
 }
-
