--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -131,9 +131,31 @@ nav img {
 #introduction p {
 	margin-bottom: 0.5em;
 }
+#portfolio {
+    position: relative;
+}
 #portfolio h2 {
 	text-align: center;
 	margin-bottom: 1.5em;
+	position: relative;
+}
+#portfolio .editBtn {
+    position: absolute;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 5px;
+    top: 50%;
+    transform: translateY(-50%);
+    left: calc(50% + 125px);
+	font-family: 'Work Sans';
+    font-weight: 400;
+    font-size: 14px;
+    cursor: pointer;
+	color: #000;
+}
+#portfolio .editBtn i {
+	font-size: 16px;
 }
 .filters {
 	display: flex;
@@ -248,7 +270,6 @@ footer nav ul {
 	justify-content: flex-end;
 	margin: 2em;
 }
-
 .editMode {
 	position: relative;
 	width: 100%;
@@ -261,4 +282,25 @@ footer nav ul {
 	gap: 12px;
 	font-weight: 400;
 	font-size: 16px;
+}
+.modal {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.3);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	display: none;
+}
+.modal-wrapper {
+	width: 630px;
+	max-width: calc(100vw - 20px);
+	max-height: calc(100vh - 20px);
+	padding: 20px;
+	border-radius: 10px;
+	background-color: #FFF;
+	overflow: auto;
 }
