styling for modal

--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -294,6 +294,7 @@ footer nav ul {
 	justify-content: center;
 	align-items: center;
 	display: none;
+	z-index: 2;
 }
 .modal-wrapper {
 	width: 630px;
