--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -23,7 +23,7 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
+article, aside, details, figcaption, figure, img,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
@@ -44,6 +44,13 @@ q:before, q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
+}
+input, select {
+    font-family: 'Work Sans', sans-serif;
+	font-size: 14px;
+	font-weight: 400;
+	color: #444;
+	padding: 0 18px;
 }
 /** end reset css**/
 @keyframes fadeIn {
@@ -325,7 +332,7 @@ footer nav ul {
 }
 .modal-wrapper {
 	position: relative;
-	width: 630px;
+	width: 530px;
 	padding: 60px 105px 45px 105px;
 	border-radius: 10px;
 	background-color: #FFF;
@@ -385,9 +392,14 @@ hr {
 	border-radius: 60px;
 	margin: 0 auto;
 	cursor: pointer;
+	transition: 500ms;
 }
 .modal-btn:hover {
 	background-color: #0E2F28;
+}
+.modal-btn.disabled {
+    background-color: #ccc;
+    cursor: not-allowed;
 }
 .modal-gallery {
     display: grid;
@@ -422,4 +434,81 @@ hr {
 .delete-img i {
     font-size: 13px;
     color: white;
+}
+/* Formulaire */
+.modal-form {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+} 
+.upload-section {
+    position: relative; /* Permet un positionnement interne précis */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    background-color: #E8F1F6;
+    border-radius: 3px;
+	padding: 20px;
+    overflow: hidden; /* S'assure que l'image ne dépasse pas le conteneur */
+	gap: 9px;
+	margin-bottom: 10px;
+}
+.placeholder-icon {
+	color: #B9C5CC;
+	font-size: 76px;
+}
+.upload-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #CBD6DC;
+	font-family: 'Work Sans';
+    border-radius: 50px;
+    padding: 10px 33px;
+    font-size: 14px;
+    color: #306685;
+    font-weight: 500;
+    cursor: pointer;
+	transition: 500ms;
+}
+.upload-button:hover {
+	background-color: #b5c4cc;
+}
+.preview-image {
+	max-width: 150px;
+}
+.file-input {
+    display: none;
+}
+.file-info {
+    font-size: 10px;
+    color: #444;
+}
+/* Champs de formulaire */
+.form-group {
+	display: flex;
+	flex-direction: column;
+}
+.form-label {
+	color: #3D3D3D;
+	margin-bottom: 10px;
+	font-size: 14px;
+}
+.form-input,
+.form-select {
+	box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.09);
+	border: none;
+	padding: 18px;
+	background-color: #fff;
+}
+.form-select {
+	appearance: none;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	background-position: right 20px center;
+	background-repeat: no-repeat;
+	background-image: url('/FrontEnd/assets/icons/chevron-down-solid.svg');
+	background-size: 16px;
 }
